5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4431/executions/1692_1872.log
== TEST (2019-04-23 23:54:11) 
-- CODE:
y=int(input("asa"))
z=int(input("asajs"))
u=y%z
print(u)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    y=int(input())
ValueError: invalid literal for int() with base 10: '4.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 23:54:24) 
-- CODE:
y=int(input("asa"))
z=int(input("asajs"))
u=y%z
print(u)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    y=int(input())
ValueError: invalid literal for int() with base 10: '4.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 23:54:47) 
-- CODE:
y=int(input("asa"))
z=int(input("asajs"))
u=y%z
print(u)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    y=int(input())
ValueError: invalid literal for int() with base 10: '4.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 00:15:53) 
-- CODE:
y=int(input("asa"))
z=int(input("asajs"))
u=y%z
print(u)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    y=int(input())
ValueError: invalid literal for int() with base 10: '4.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 00:16:18) 
-- CODE:
y=int(input("asa"))
z=int(input("asajs"))
u=y%z
print(u)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    y=int(input())
ValueError: invalid literal for int() with base 10: '4.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 00:16:31) 
-- CODE:
y=int(input("asa"))
z=int(input("asajs"))
u=y%z
print(u)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    y=int(input())
ValueError: invalid literal for int() with base 10: '4.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 00:16:44) 
-- CODE:
y=int(input("asa"))
z=int(input("asajs"))
u=y%z
print(u)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    y=int(input())
ValueError: invalid literal for int() with base 10: '4.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 00:17:06) 
-- CODE:
y=int(input("asa"))
z=int(input("asajs"))
u=y%z
print(u)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    y=int(input())
ValueError: invalid literal for int() with base 10: '4.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 00:17:20) 
-- CODE:
y=int(input("asa"))
z=int(input("asajs"))
u=y%z
print(u)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    y=int(input())
ValueError: invalid literal for int() with base 10: '4.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 00:17:35) 
-- CODE:
y=int(input("asa"))
z=int(input("asajs"))
u=y%z
print(u)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    y=int(input())
ValueError: invalid literal for int() with base 10: '4.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 00:17:55) 
-- CODE:
y=int(input("asa"))
z=int(input("asajs"))
u=y%z
print(u)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    y=int(input())
ValueError: invalid literal for int() with base 10: '4.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 00:20:53) 
-- CODE:
a=200%6
b=201%6
c=202%6
d=203%6
e=204%6
f=205%6
print(a)
print(b)
print(c)
print(d)
print(e)
print(f)
-- OUTPUT:
2
3
4
5
0
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 00:21:19) 
-- CODE:
a=200%6
b=201%6
c=202%6
d=203%6
e=204%6
f=205%6
g=206%6
print(a)
print(b)
print(c)
print(d)
print(e)
print(f)
print(g)
-- OUTPUT:
2
3
4
5
0
1
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 00:27:53) 
-- CODE:
200//6
-- OUTPUT:
2
3
4
5
0
1
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 00:28:10) 
-- CODE:
u=200//6
print(u)
-- OUTPUT:
33
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 00:28:24) 
-- CODE:
u=200/6
print(u)
-- OUTPUT:
33.333333333333336
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 00:28:32) 
-- CODE:
u=200/7
print(u)
-- OUTPUT:
28.571428571428573
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 00:28:46) 
-- CODE:
u=200%7
print(u)
-- OUTPUT:
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 00:29:00) 
-- CODE:
u=200%6
print(u)
-- OUTPUT:
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 00:40:23) 
-- CODE:
u=204%30
print(u)
-- OUTPUT:
24
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 00:42:39) 
-- CODE:
u=200%7+4
print(u)
-- OUTPUT:
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 00:44:09) 
-- CODE:
u=(200%7+4)-7
print(u)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 00:53:32) 
-- CODE:
x=float(input("Digite o valor X: "))
y=float(input("Digite o valor y: "))
if(x=0)and(y!=0):
	print("Eixo X")
-- ERROR:
File "XXXX", line 3
    if(x=0)and(y!=0):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 00:53:41) 
-- CODE:
x=float(input("Digite o valor X: "))
y=float(input("Digite o valor y: "))
if(x=0)and(y=!0):
	print("Eixo X")
-- ERROR:
File "XXXX", line 3
    if(x=0)and(y=!0):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 00:53:55) 
-- CODE:
x=float(input("Digite o valor X: "))
y=float(input("Digite o valor y: "))
if(x==0)and(y!=0):
	print("Eixo X")
-- ERROR:
File "XXXX", line 3
    if(x=0)and(y=!0):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 00:56:28) 
-- CODE:
x=float(input("Digite o valor X: "))
y=float(input("Digite o valor y: "))
if(x==0)and(y!=0):
	print("Eixo X")
elif(x!=0)and(y=0):
	print("Eixo Y")
elif(x==0)and(y==0):
	print("Origem")
elif(x>0)and(y>0):
	print("Q1")
elif(x<0)and(y>0):
	print("Q2")
elif(x<0)and(y<0):
	print("Q3")
elif(x>0)and(y>0):
	print("Q4")
-- ERROR:
File "XXXX", line 5
    elif(x!=0)and(y=0):
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 00:56:42) 
-- CODE:
x=float(input("Digite o valor X: "))
y=float(input("Digite o valor y: "))
if(x==0)and(y!=0):
	print("Eixo X")
elif(x!=0)and(y==0):
	print("Eixo Y")
elif(x==0)and(y==0):
	print("Origem")
elif(x>0)and(y>0):
	print("Q1")
elif(x<0)and(y>0):
	print("Q2")
elif(x<0)and(y<0):
	print("Q3")
elif(x>0)and(y>0):
	print("Q4")
-- ERROR:
File "XXXX", line 5
    elif(x!=0)and(y=0):
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 00:57:14) 
-- CODE:
x=float(input("Digite o valor X: "))
y=float(input("Digite o valor y: "))
if(x==0)and(y!=0):
	print("Eixo Y")
elif(x!=0)and(y==0):
	print("Eixo X")
elif(x==0)and(y==0):
	print("Origem")
elif(x>0)and(y>0):
	print("Q1")
elif(x<0)and(y>0):
	print("Q2")
elif(x<0)and(y<0):
	print("Q3")
elif(x>0)and(y>0):
	print("Q4")
-- EXECUTION TIME:
0.164003
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Q4
---- user output:

-- TEST CASE 2:
---- input:
0.1
0
---- correct output:
Eixo X
---- user output:
Eixo X
-- TEST CASE 3:
---- input:
0.0
0.0
---- correct output:
Origem
---- user output:
Origem
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 00:57:17) 
-- CODE:
x=float(input("Digite o valor X: "))
y=float(input("Digite o valor y: "))
if(x==0)and(y!=0):
	print("Eixo Y")
elif(x!=0)and(y==0):
	print("Eixo X")
elif(x==0)and(y==0):
	print("Origem")
elif(x>0)and(y>0):
	print("Q1")
elif(x<0)and(y>0):
	print("Q2")
elif(x<0)and(y<0):
	print("Q3")
elif(x>0)and(y>0):
	print("Q4")
-- ERROR:
File "XXXX", line 5
    elif(x!=0)and(y=0):
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 00:57:37) 
-- CODE:
x=float(input("Digite o valor X: "))
y=float(input("Digite o valor y: "))
if(x==0)and(y!=0):
	print("Eixo Y")
elif(x!=0)and(y==0):
	print("Eixo X")
elif(x==0)and(y==0):
	print("Origem")
elif(x>0)and(y>0):
	print("Q1")
elif(x<0)and(y>0):
	print("Q2")
elif(x<0)and(y<0):
	print("Q3")
elif(x>0)and(y>0):
	print("Q4")
-- ERROR:
File "XXXX", line 5
    elif(x!=0)and(y=0):
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 00:57:45) 
-- CODE:
x=float(input("Digite o valor X: "))
y=float(input("Digite o valor y: "))
if(x==0)and(y!=0):
	print("Eixo Y")
elif(x!=0)and(y==0):
	print("Eixo X")
elif(x==0)and(y==0):
	print("Origem")
elif(x>0)and(y>0):
	print("Q1")
elif(x<0)and(y>0):
	print("Q2")
elif(x<0)and(y<0):
	print("Q3")
elif(x>0)and(y>0):
	print("Q4")
-- ERROR:
File "XXXX", line 5
    elif(x!=0)and(y=0):
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 00:57:51) 
-- CODE:
x=float(input("Digite o valor X: "))
y=float(input("Digite o valor y: "))
if(x==0)and(y!=0):
	print("Eixo Y")
elif(x!=0)and(y==0):
	print("Eixo X")
elif(x==0)and(y==0):
	print("Origem")
elif(x>0)and(y>0):
	print("Q1")
elif(x<0)and(y>0):
	print("Q2")
elif(x<0)and(y<0):
	print("Q3")
elif(x>0)and(y>0):
	print("Q4")
-- ERROR:
File "XXXX", line 5
    elif(x!=0)and(y=0):
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 00:58:04) 
-- CODE:
x=float(input("Digite o valor X: "))
y=float(input("Digite o valor y: "))
if(x==0)and(y!=0):
	print("Eixo Y")
elif(x!=0)and(y==0):
	print("Eixo X")
elif(x==0)and(y==0):
	print("Origem")
elif(x>0)and(y>0):
	print("Q1")
elif(x<0)and(y>0):
	print("Q2")
elif(x<0)and(y<0):
	print("Q3")
elif(x>0)and(y>0):
	print("Q4")
-- ERROR:
File "XXXX", line 5
    elif(x!=0)and(y=0):
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 00:58:22) 
-- CODE:
x=float(input("Digite o valor X: "))
y=float(input("Digite o valor y: "))
if(x==0)and(y!=0):
	print("Eixo Y")
elif(x!=0)and(y==0):
	print("Eixo X")
elif(x==0)and(y==0):
	print("Origem")
elif(x>0)and(y>0):
	print("Q1")
elif(x<0)and(y>0):
	print("Q2")
elif(x<0)and(y<0):
	print("Q3")
elif(x>0)and(y<0):
	print("Q4")
-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 00:58:28) 
-- CODE:
x=float(input("Digite o valor X: "))
y=float(input("Digite o valor y: "))
if(x==0)and(y!=0):
	print("Eixo Y")
elif(x!=0)and(y==0):
	print("Eixo X")
elif(x==0)and(y==0):
	print("Origem")
elif(x>0)and(y>0):
	print("Q1")
elif(x<0)and(y>0):
	print("Q2")
elif(x<0)and(y<0):
	print("Q3")
elif(x>0)and(y<0):
	print("Q4")
-- EXECUTION TIME:
0.202351
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Q4
---- user output:
Q4
-- TEST CASE 2:
---- input:
0.1
0
---- correct output:
Eixo X
---- user output:
Eixo X
-- TEST CASE 3:
---- input:
0.0
0.0
---- correct output:
Origem
---- user output:
Origem
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-26 01:23:15) 
-- CODE:
x=float(input("Digite o valor X: "))
y=float(input("Digite o valor y: "))
if(x==0)and(y!=0):
	print("Eixo Y")
elif(x!=0)and(y==0):
	print("Eixo X")
elif(x==0)and(y==0):
	print("Origem")
elif(x>0)and(y>0):
	print("Q1")
elif(x<0)and(y>0):
	print("Q2")
elif(x<0)and(y<0):
	print("Q3")
elif(x>0)and(y<0):
	print("Q4")
-- EXECUTION TIME:
0.177728
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Q4
---- user output:
Q4
-- TEST CASE 2:
---- input:
0.1
0
---- correct output:
Eixo X
---- user output:
Eixo X
-- TEST CASE 3:
---- input:
0.0
0.0
---- correct output:
Origem
---- user output:
Origem
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
